Maps: will show marker colors based on inspector type